# webcom

./: CMakeLists.txt  busy.yaml  cpm.dependencies  cpmpack.json
share/exampleWebcom/: index.html  index.js
share/webcom/: webcom.js  websockets.js  yaml.js
src/exampleWebcom/: Server.h  main.cpp
src/exampleWebcom2/: main.cpp
src/testWebcom/: main.cpp
src/webcom/: Adapter.h  CndlServices.h  Controller.h  GuardedType.h  Service.h  Services.h  ServicesView.h  UserConnection.h  UserConnectionView.h  UserConnectionViewController.h  View.h  ViewController.h  Viewer.h  WebServices.h  asFunction.h  utility.h  webcom.h
src/webcom/widget/: ReadAndWriteValue.h  ReadValue.h  all.h
